# ortografe

./: .gitignore  .ocamlformat  .ocamlformat-ignore  LICENSE  Makefile  README.md  TODO.md  build  dune  dune-project  first-install  flow.dot  fly.toml  index.html  ortografe.opam  ortografe.opam.locked  ortografe.opam.template  update-opam-file
data/english-freq/: dune  erofa_intersection
data/erofa/: DOR.csv  LICENSE  download
data/homemade/: 1990-extra.csv  LICENSE  README.md  dict-erofa-ext.csv  dict-erofa.adds.csv  dict-rect1990+erofa.adds.csv  dict.adds.csv  dune  lexique-extra.csv  pluriels-aux+erofa.csv
data/lexique/: 1990-extra.csv  1990.csv  1990.py  dune  filter-gather.sql  open-db
data/wiktionnaire/: 1990-corrections.csv  1990.csv  LICENSE  README.md  dune  generate  generate.py  source
dict-gen/browser/: dict_gen.ml  dict_gen_browser.ml  dict_gen_browser.mli  dune  foo.html  foo.js
dict-gen/common/: data.ml  data.mli  dict_gen.ml  dict_gen.mli  dune  rewrite.ml  rewrite.mli  rules.ml  rules.mli
dict-gen/js/: dict_gen.ml  dune  foo.html  foo.js
dict-gen/lib/: data.ml  data.mli  data_fs.ml  data_fs.mli  data_src.ml  data_src.mli  dict_gen.ml  dict_gen.mli  dune  rewrite.ml  rewrite.mli  rules.ml  rules.mli
dict-gen/nonbrowser/: dict_gen_nonbrowser.ml  dict_gen_nonbrowser.mli  dune
dict-gen/test/: dict_gen_tests.ml  dune
doc-conversion/cli/: dune  ortografe_cli.ml  ortografe_cli.mli
doc-conversion/deployment/: Dockerfile
doc-conversion/embedded/: dune  ortografe_embedded.ml
doc-conversion/lib/: common.ml  common.mli  docx.ml  docx.mli  dune  html.ml  html.mli  more_markup.ml  more_markup.mli  odt.ml  odt.mli  officeopenxml.ml  officeopenxml.mli  opendocument.ml  opendocument.mli  ortografe.ml  ortografe.mli  text.ml  text.mli  zip.ml  zip.mli
doc-conversion/server/: dune
doc-conversion/test/: dune  epub.md  test.docx  test.odt  test_ortografe.ml
edition/: alice  alice-check-pp  book  fables  manual-changes.diff  test.html
erofa/: DOR-numérique_v1.0.2.csv  LICENSE  Verbes-conjugués-top-2k-Lexique.xlsx
extension/: README.md  dune  import-dict  make-extension  make-icon
extension/apple/: create  manual.diff
extension/src/: LICENSE  dict-format.md  dune  manifest.json  options.html  options.js  rewrite.js  rewrite_main.js  rules-format.md
extension/src/_locales/en/: messages.json
extension/src/_locales/fr/: messages.json
extension/store-page/: description  description_en  description_fr
extension/test/: dune  test.js
homemade-data/: LICENSE  dict.adds.csv
keyboard/: dune  gen-gboard  gen-heliboard
lexique/: 1990.csv  1990.py
libs/brrex/: brrex.ml  brrex.mli  dune
libs/cmdliner-bindops/: cmdliner_bindops.ml  cmdliner_bindops.mli  dune
libs/markup_js/: dune  markup_js.ml  markup_js.mli
libs/markup_print/: dune  html_writer.ml  html_writer.mli  xml_writer.ml  xml_writer.mli
libs/markup_t/: LICENSE.md  common.ml  detect.mli  dune  html_parser.ml  html_tokenizer.ml  kstream.ml  kstream.mli  markup_t.ml  markup_t.mli  xml_parser.ml  xml_tokenizer.ml
libs/myhtml/: dune  myhtml.ml  myhtml.mli
libs/of_iter/: dune  of_iter.ml  of_iter.mli
libs/ppx_lazy_option_op/: README.md  dune  ppx_lazy_option_op.ml
libs/ppx_list_include/: README.md  dune
libs/ppx_list_include/src/: ppx_list_include.ml
libs/ppx_list_include/test/: dune  test_ppx_list_include.ml
libs/ppx_partial/: README.md
libs/ppx_partial/src/: dune  ppx_partial.ml
libs/ppx_partial/test/: dune  test_ppx_partial.ml
libs/ppx_uchar_literal/: README.md  dune  ppx_uchar_literal.ml
libs/sexp_with_utf8/src/: dune  sexp_with_utf8.ml  sexp_with_utf8.mli
libs/sexp_with_utf8/test/: dune  test.ml
libs/string_comparison/: dune  string_comparison.ml
playground/: csv-to-pdf  csv-to-pdf.html  csv.typst  debug  dune  gruaz  x.js  x.ml
site/: dict_snapshot.js
site/client/: client_bin.ml  dune  index.html  index_ht.ml  index_old.html  page.js  privacy.html
site/deployment/: Dockerfile
site/dict-search/: dict_search.ml  dict_search.mli  dune
site/server/: book_import.ml  book_import.mli  dune  glibc.c  rewrite_index.ml  rewrite_index.mli  server.ml
site/static/: LICENSE  dune
site/test/: dune  test_site.ml
wiktionnaire/: 1990.csv  generate.py
