(rule
 (target OA-dictionnaire-EROFA.pdf)
 (deps)
 (action (run curl -sS -O http://www.lambert-lucas.com/wp-content/uploads/2022/11/OA-dictionnaire-EROFA.pdf)))

;; add spurious dependencies to server.exe, so we can
;; make dune exec server.exe build the runtime deps of
;; the exe on top of the exe itself
(rule
 (deps
  (glob_files extension/*.zip)
  (glob_files site/static/*)
  site/static/books
 )
 (action (copy site/server/server.exe server_all.exe)))
