(rule
 (target OA-dictionnaire-EROFA.pdf)
 (deps)
 (action (run curl -sS -O http://www.lambert-lucas.com/wp-content/uploads/2022/11/OA-dictionnaire-EROFA.pdf)))

;; add spurious dependencies to server.exe, so we can
;; make dune exec server.exe build the runtime deps of
;; the exe on top of the exe itself
(rule
 (deps
  (glob_files extension/*.zip)
  (glob_files site/static/*)
   site/static/books
   ;; no such thing as runtime-deps-of-tests. sigh. even building (alias runtest)
   ;; seems to do nothing
   %{project_root}/doc-conversion/test/.test_ortografe.inline-tests/inline_test_runner_test_ortografe.exe
   %{project_root}/dict-gen/test/.dict_gen_tests.inline-tests/inline_test_runner_dict_gen_tests.exe
 )
 (action (copy site/server/server.exe server_all.exe)))
