(rule
 (targets
   dict.external-sources.gen.csv
   dict1990.gen.csv)
 (deps (sandbox always)
   import-dict
   ../data/erofa/DOR-numerique_v1.0.2.csv
   ../data/wiktionnaire/1990.csv
   ../data/lexique/1990.csv)
 (action (run ./import-dict part1)))

(rule
 (targets dict.gen.csv dict.js
          alfonic.dict
          ortograf_net_plat.dict
          qu.dict)
 (deps (sandbox always)
   import-dict
   (glob_files ../data/homemade/*.csv)
   dict.external-sources.gen.csv
   dict1990.gen.csv)
 (action
  (setenv DUNEROOT %{project_root}
   (run ./import-dict part2))))

(rule
 (targets extension.zip extension2.zip (dir src2))
 (deps    (glob_files src/*.{html,js,png,dict,json,svg}) (sandbox always preserve_file_kind))
 (action  (run ./make-extension)))
