(rule
 (targets
   dict.external-sources.gen.csv
   dict1990.gen.csv)
 (deps (sandbox always)
   import-dict
   ../data/erofa/DOR.csv
   ../data/wiktionnaire/1990.csv
   ../data/wiktionnaire/1990-corrections.csv
   ../data/homemade/1990-extra.csv
   ../data/lexique/1990.csv)
 (action (run ./import-dict part1)))

(rule
 (targets dict.gen.csv dict.js)
 (deps (sandbox always)
   import-dict
   (glob_files ../data/homemade/dict-erofa-ext.csv)
   dict.external-sources.gen.csv
   dict1990.gen.csv)
 (action
  (setenv DUNEROOT %{project_root}
   (run ./import-dict part2))))

(rule
 (targets extension.zip extension2.zip (dir src2))
 (deps
  (glob_files
    src/*.{html,js,png,json,svg,dict,csv,tsv})
    src/_locales/fr/messages.json
    src/_locales/en/messages.json
  (sandbox always preserve_file_kind))
 (action  (run ./make-extension)))
