(executable
 (name x)
 (libraries base brr brrex js_of_ocaml)
 (js_of_ocaml)
 (preprocess (pps ppx_sexp_conv))
 (modes js))

(env
 (jsopt (js_of_ocaml
         (compilation_mode whole_program)
         (flags --opt 3))))

(rule
 (target foo.html)
 (deps x.bc.js)
 (action (bash "
{
echo '<html><head><script>';
cat x.bc.js
echo '</script></head></html>'
} > foo.html
")))
