(executable
 (name x)
 (libraries base brr brrex js_of_ocaml)
 (js_of_ocaml)
 (preprocess (pps ppx_sexp_conv))
 (modes js))

(env
 (jsopt (js_of_ocaml
         (compilation_mode whole_program)
         (flags --opt 3))))

(rule
 (target foo.html)
 (deps x.bc.js x.js (sandbox always))
 (action (bash "
{
echo '<!DOCTYPE html><html>'
echo '<head>'
echo '</head>'
echo '<body>'
echo '<div id=main></div>'
echo '<script>'; cat x.bc.js; echo '</script>'
echo '<script>'; cat x.js; echo '</script>'
echo '</body>'
echo '</html>'
} > foo.html
")))
