(rule
 (target en_50k.txt)
 (deps (sandbox always))
 (action (run curl --fail-with-body -o %{target} -sS "https://raw.githubusercontent.com/hermitdave/FrequencyWords/refs/heads/master/content/2018/en/en_50k.txt")))

(rule
 (target erofa_intersection)
 (mode promote)
 (deps (sandbox always) en_50k.txt %{project_root}/extension/dict.gen.csv)
 (action  (with-stdout-to %{target}
           (run sqlite3
                -cmd ".bail on"
                -cmd ".mode csv"
                -cmd "create table e(old,new);"
                -cmd ".import ../../extension/dict.gen.csv e"
                -cmd "create table en(word,count);"
                -cmd ".separator ' '"
                -cmd ".import en_50k.txt en"
                ;; what we need for rewrite.js is not exactly English words,
                ;; it's the subset of the Érofa entries that could rewrite english
                ;; words. So because the Érofa entry "batterie" rewrite "batteries",
                ;; which is an english word, we have to list "batterie", despite it
                ;; not being an english word.
                -cmd "select distinct ee.entry
                      from en
                      inner join (select e.old as entry, e.old as implied from e
                                  union
                                  select e.old, e.old || 's' from e
                                 ) ee
                      on en.word = ee.implied
                      and en.word != 'comme'
                      "))))
