(rule
 (target Lexique383.zip)
 (deps (sandbox always))
 (action (run curl --fail-with-body -o %{target} -sS "http://www.lexique.org/databases/Lexique383/Lexique383.zip")))

(rule
 (target Lexique383-full.gen.tsv)
 (deps (sandbox always))
 (action
  (with-stdout-to %{target}
   (run unzip -p %{dep:Lexique383.zip} Lexique383.tsv))))

;; Narrowing down this file saves 300ms when loading the file, but also makes it easier to
;; grep through the file, as we don't have a ton of columns that cause all the lines to
;; wrap all the time, which is difficult to read. If we want to embed data in the
;; extension in the future, that'd also cut down the size of that data by 6.3x.
(rule
 (target Lexique383.gen.tsv)
 (deps (sandbox always)
   Lexique383-full.gen.tsv
   ../wiktionnaire/min-h.gen.csv
   ../homemade/lexique-extra.csv
   1990.csv
 )
 (action
  (with-stdout-to %{target}
   (run sqlite3 -init %{dep:filter-gather.sql} ww))))
