;; It's slow and takes a big machine to create this file, so just make it available for
;; other devs to use.
(rule
 (target min.gen.csv)
 (deps    (glob_files min-computed.gen.csv) (sandbox always))
 (action  (bash "
set -e -u -o pipefail
if [ -f min-computed.gen.csv ]; then
  cp min-computed.gen.csv min.gen.csv
else
  server=https://ortografe-server.fly.dev
  # server=http://localhost:8081
  curl -sS \"$server/static/min.gen.csv.zst\" | unzstd > %{target}
fi
")))

(rule
 ;; since we only care about h-aspiré, just drop the bulk of the file to make
 ;; it faster to load (50MB -> 1MB)
 (target min-h.gen.csv)
 (deps    (sandbox always))
 (action  (with-stdout-to %{target}
           (progn
            (run head -n 1 %{dep:min.gen.csv})
            (run grep ^h %{dep:min.gen.csv})))))

(rule
 (target min.gen.csv.zst)
 (deps (sandbox always preserve_file_kind))
 (action (run zstd -q %{dep:min.gen.csv})))
