;; It's slow and takes a big machine to create this file, so just make it available for
;; other devs to use.
(rule
 (target min.gen.csv)
 (deps    (glob_files min-computed.gen.csv) (sandbox always))
 (action  (bash "
set -e -u -o pipefail
if [ -f min-computed.gen.csv ]; then
  cp min-computed.gen.csv min.gen.csv
else
  server=https://orthographe-rationnelle.info
  # server=http://localhost:8081
  curl --fail-with-body -sS \"$server/static/min.gen.csv.zst\" | unzstd > %{target}
fi
")))

(rule
 (target min.gen.csv.zst)
 (deps (sandbox always preserve_file_kind))
 (action (run zstd -q %{dep:min.gen.csv})))

(rule
 ;; since we only care about h-aspiré, just drop the bulk of the file to make
 ;; it faster to load (50MB -> 500kB)
 (target min-h.gen.csv)
 (deps    (sandbox always) min.gen.csv)
 (action  (with-stdout-to %{target}
           (run sqlite3
                -cmd ".bail on"
                -cmd ".mode csv"
                -cmd ".import ../wiktionnaire/min.gen.csv w"
                -cmd ".header on"
                -cmd "select word, h_aspire from w where word like 'h%'"
 ))))
