(executable
 (name dict_gen_browser)
 (libraries js_of_ocaml dict_gen_common brr brrex)
 (preprocess (pps ppx_compare ;; drop ppx_jane, to avoid the toplevel inline tests side effects
                  ppx_sexp_conv
                  ppx_sexp_value
                  ppx_string
                  ppx_uchar_literal
                  ppx_lazy_option_op
                  ppx_partial))
 (modes js))

(env
 (jsopt (js_of_ocaml
         (compilation_mode whole_program)
         (flags --opt 3))))
