(library
 (name dict_gen_common)
 (libraries
   bheap
   base
   re
   sexplib
   string_comparison
 )
 (preprocess (pps ppx_compare ;; drop ppx_jane, to avoid the toplevel inline tests side effects
                  ppx_sexp_conv
                  ppx_sexp_value
                  ppx_string
                  ppx_uchar_literal
                  ppx_lazy_option_op
                  ppx_partial
                  ppx_pipebang
                  ppx_list_include)))
