(env
  (_ (js_of_ocaml (compilation_mode whole_program))))

(executable
 (name dict_gen)
 (libraries js_of_ocaml dict_gen_common brr brrex)
 ;; maybe I should use whatever dune does by default
 (js_of_ocaml (flags --opt 3 --no-sourcemap))
 (preprocess (pps ppx_compare ;; drop ppx_jane, to avoid the toplevel inline tests side effects
                  ppx_sexp_conv
                  ppx_sexp_value
                  ppx_string
                  ppx_uchar_literal
                  ppx_lazy_option_op))
 (modes js))
