(library
 (name dict_gen)
 (libraries
   cmdliner
   cmdliner_bindops
   core
   core_unix
   dict_gen_common
   dict_gen_nonbrowser
   dict_search
   eio
   eio_main
   sexp_with_utf8
   yojson
 )
 (preprocess (pps ppx_jane
                  ppx_uchar_literal
                  ppx_lazy_option_op)))
