(library
 (name ortografe)
 (libraries
   core
   markup
   uucp
   uunf
   uuseg
   uutf
   zipc
 )
 (preprocess (pps ppx_jane))
)

(rule
 (target dict.ml)
 (deps %{project_root}/extension/dict.gen.csv)
 (action (run bash
              -euo pipefail
              -c "{ echo 'let value = {|'; cat %{deps}; echo '|}'; } > %{target}")))
