(library
 (name ortografe)
 (libraries
   core
   markup
   uucp
   uunf
   uuseg
   uutf
   zipc
 )
 (preprocess (pps ppx_jane))
)

(rule
 (deps
   (:erofa %{project_root}/extension/dict.gen.csv)
   (:rect1990 %{project_root}/extension/dict1990.gen.csv))
 (action (with-stdout-to dict.ml
          (run bash
               -euo pipefail
               -c "echo 'let erofa = {|'; cat %{erofa}; echo '|}';
                   echo 'let rect1990 = {|'; cat %{rect1990}; echo '|}';"))))
