(copy_files (files ../dict.js))
(copy_files (files %{project_root}/dict-gen/bin/dict_gen_browser.bc.js))
(copy_files (files %{project_root}/extension/dict1990.gen.csv))
(copy_files (files %{project_root}/data/lexique/Lexique383.gen.tsv))
         
(rule
 (targets
   Emblem_of_La_Francophonie.128padded.png
   Emblem_of_La_Francophonie.128.png
   Emblem_of_La_Francophonie.64.png
 )
 (deps    Emblem_of_La_Francophonie.svg (sandbox always))
 (action  (run ../make-icon)))

(rule
 (target dict-format.html)
 (deps (sandbox always))
 (action  (run pandoc -s %{dep:dict-format.md} -o %{target})))
(rule
 (target rules-format.html)
 (deps (sandbox always))
 (action  (run pandoc -s %{dep:rules-format.md} -o %{target})))

;; by default, dune ignores all directories that start with an underscore \o/
(dirs :standard _locales)
