(executable
 (name server)
 (libraries
   cmdliner
   cmdliner_bindops
   core
   core_unix.sys_unix
   dict_gen_common
   dict_search
   dream
   hyper
   ortografe
   ortografe_embedded
   sexp_with_utf8
   uri
 )
 (foreign_stubs
  (language c)
  (names glibc))
 (link_flags :standard -ccopt -Wl,--wrap=fmod,--wrap=__isoc23_strtol)
 (preprocess (pps ppx_jane lwt_ppx ppx_lazy_option_op ppx_partial))
 )

(rule
 (deps
  (sandbox always)
  (:erofa_dict_search %{project_root}/data/homemade/dict-erofa-dict-search.binio))
 (action (with-stdout-to data.ml
          (run bash
               -euo pipefail
               -c "echo -n 'let data_homemade_dict_erofa_dict_search = '; cat %{erofa_dict_search};"))))
