(copy_files (files %{project_root}/extension/{extension,extension2}.zip))
(rule (action (copy %{project_root}/extension/dict.gen.csv erofa.csv)))
(rule (action (copy %{project_root}/extension/dict1990.gen.csv rect1990.csv)))
(copy_files (files ../client/{*.js,privacy.html,index.html}))
(copy_files (files %{project_root}/data/lexique/Lexique383.gen.tsv))
(copy_files (files %{project_root}/dict-gen/js/dict_gen.bc.js))
(copy_files (files %{project_root}/doc-conversion/bin/doc_conversion.bc.js))
(copy_files (files %{project_root}/extension/src/{{rewrite,dict}.js,rules-format.html}))
(copy_files (files %{project_root}/keyboard/*.zip))
(copy_files (files %{project_root}/edition/{Alice_au_pays_des_merveilles.epub,Alice_au_pays_des_merveilles-manual.epub}))

(rule
  (target dict.js.gz)
  (action  (run gzip -f -n -k %{dep:dict.js})))
(rule
  (target dict_gen.bc.js.gz)
  (action  (run gzip -f -n -k %{dep:dict_gen.bc.js})))
(rule
  (target doc_conversion.bc.js.gz)
  (action  (run gzip -f -n -k %{dep:doc_conversion.bc.js})))
(rule
  (target Lexique383.gen.tsv.gz)
  (action  (run gzip -f -n -k %{dep:Lexique383.gen.tsv})))

(copy_files (files %{project_root}/doc-conversion/bin/ortografe_cli.exe))
(copy_files (files %{project_root}/erofa-texte.pdf))
(rule
 (targets index_old.html)
 (action (run ../build/build.exe rewrite-index
              %{dep:../client/index_old.html}
              %{dep:books.html})))

(rule
 (targets (dir books) books.html)
 (deps    (glob_files %{project_root}/dl.gen/*) (sandbox always))
 (action
  (setenv DUNEROOT %{project_root}
   (run ../build/build.exe convert-all))))

(rule
 (targets erofa-texte.pdf)
 (deps %{project_root}/OA-dictionnaire-EROFA.pdf)
 (action
  (run qpdf %{project_root}/OA-dictionnaire-EROFA.pdf --pages . 1-78,521-523 -- erofa-texte.pdf)))

(copy_files (files %{project_root}/data/wiktionnaire/min.gen.csv.zst))

(copy_files
 (files %{project_root}/extension/store-page/screenshot-1280-800.png))
(rule (action (copy %{project_root}/extension/apple/create apple-create)))
(rule (action (copy %{project_root}/extension/apple/manual.diff manual.diff)))

(rule
 (target chrome.svg)
 (action
   ;; licence is public domain, so nothing more to do
   (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/e/e1/Google_Chrome_icon_%28February_2022%29.svg")))

(rule
 (target firefox.svg)
 (action
  ;; licence is MPL2, although I don't understand what it requires
  ;; since it's talking about source code
  (run curl -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/a/a0/Firefox_logo%2C_2019.svg")))

;; public domain
(rule
 (target safari.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/5/52/Safari_browser_logo.svg")))

;; MIT
(rule
 (target edge.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/f6/Edge_Logo_2019.svg")))

;; MPL2, same as firefox
(rule
 (target thunderbird.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/2/2f/Thunderbird_2023_icon.svg")))

;; https://creativecommons.org/licenses/by-sa/3.0/deed.en
(rule
 (target pdf.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/e/ec/Pdf_by_mimooh.svg")))

;; public domain
(rule
 (target epub.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/f2/Epub_logo_color.svg")))

;; public domain
(rule
 (target word.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/fd/Microsoft_Office_Word_%282019%E2%80%93present%29.svg")))
(rule
 (target powerpoint.svg)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/0/0d/Microsoft_Office_PowerPoint_%282019%E2%80%93present%29.svg")))

;; https://creativecommons.org/licenses/by-sa/4.0/deed.en
;; should be fine with link + note at the bottom
(rule
 (target libreoffice_writer.png)
 (action
  (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/4/45/LibreOffice_7.5_Writer_Icon.png")))

;; https://creativecommons.org/licenses/by-sa/3.0/deed.en
(rule
 (target text_file.svg)
 (action
   (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/2/23/Text-txt.svg")))

;; LGPL again
(rule
 (target internet_globe.svg)
 (action
   (run curl --fail-with-body -o %{target} -sS "https://upload.wikimedia.org/wikipedia/commons/f/f9/Crystal_Clear_app_linneighborhood.svg")))

;; will point to youtube video, so no issue of license here
(rule
 (target hoedt_piron.jpg)
 (action
   (run curl --fail-with-body -o %{target} -sS "https://img.youtube.com/vi/5YO7Vg1ByA8/mqdefault.jpg")))
